Header / Avatar / User Tier / Fixed the tier position on mobile

--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -339,9 +339,12 @@
 
 .header-avatar-user-tier {
     position: absolute;
-    bottom: 5px;
-    right: 20px;
     height: 10px;
     width: 10px;
+    right: 3px;
+    bottom: 5px;
     transform: scale(0.35);
+    @include mq("phone") {
+        right: 20px;
+    }
 }
